--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@react-three/fiber": "^7.0.28",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^4.1.17",
+    "framer-motion-3d": "^6.3.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-intersection-observer": "^9.1.0",
     "react-scripts": "5.0.1",
+    "three": "^0.140.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
