--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "faker": "^5.5.3",
     "framer-motion": "^4.1.17",
     "framer-motion-3d": "^6.3.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-intersection-observer": "^9.1.0",
+    "react-markdown": "^8.0.3",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.7",
     "three": "^0.140.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
@@ -42,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^6.3.1"
   }
 }
